--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "@material/icon-button": "^4.0.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "query-string": "^6.8.3",
