--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loader-spinner": "^3.1.5",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.1",
+    "redux": "^4.0.5",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
